<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="8dp"
    android:layout_margin="0dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgView_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:padding="0dp"
        android:layout_margin="0dp"
        android:contentDescription="@string/str_imgContentDesc"
        android:src="@drawable/pato" />

    <TextView
        android:id="@+id/txtView_track"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgView_profile"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:text="@string/str_track"/>

    <TextView
        android:id="@+id/txtView_trackVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/imgView_profile"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@id/txtView_track"
        android:text="@string/str_track_val" />

    <TextView
        android:id="@+id/txtView_Country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtView_track"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:text="@string/str_Country"/>

    <TextView
        android:id="@+id/txtView_CountryVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtView_track"
        android:layout_marginTop="10dp"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@id/txtView_Country"
        android:text="@string/Kenya"/>

    <TextView
        android:id="@+id/txtView_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/txtView_Country"
        android:text="@string/str_Email"/>

    <TextView
        android:id="@+id/txtView_emailVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/txtView_Country"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@id/txtView_email"
        android:text="@string/str_Email_val"/>

    <TextView
        android:id="@+id/txtView_phoneNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/txtView_email"
        android:text="@string/str_PhoneNo" />

    <TextView
        android:id="@+id/txtView_phoneNoVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/txtView_email"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@id/txtView_phoneNo"
        android:text="@string/str_phoneNo_Val"/>

    <TextView
        android:id="@+id/txtView_slackUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/txtView_phoneNo"
        android:text="@string/str_slackUsername" />

    <TextView
        android:id="@+id/txtView_slackUsernameVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/txtView_phoneNo"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@id/txtView_slackUsername"
        android:text="@string/str_slackUsername_Val" />

</RelativeLayout>
</ScrollView>